<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/event_year"
            android:textSize="14sp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginHorizontal="10dp"
            android:hint="Year"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/event_month"
            android:textSize="14sp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginHorizontal="10dp"
            android:hint="Month"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/event_day"
            android:textSize="14sp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginHorizontal="10dp"
            android:hint="Day"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_event_title"
        android:hint="Enter event title"
        android:padding="12dp"
        android:lines="4"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_event_content"
        android:hint="Enter content"
        android:padding="12dp"
        android:lines="8"
        android:gravity="center"
        android:background="@android:drawable/editbox_background"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_save_event"
        android:text="Save"
        android:layout_marginTop="8dp"/>




</LinearLayout>