<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:hint="Enter title"
        android:padding="12dp"
        android:lines="4"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_content"
        android:hint="Enter content"
        android:padding="12dp"
        android:lines="8"
        android:gravity="center"
        android:background="@android:drawable/editbox_background"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_update"
        android:text="Save"
        android:layout_marginTop="8dp"/>




</LinearLayout>